Used if statement to prevent overflow/crashing of canvas, added error for numbers too big

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,3 +27,10 @@
 .canvas{
     border: 1px solid black;
 }
+
+.error{
+    color: red;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size:15px;
+    margin:8px;
+}
